Executed on Colab

--- a/camera_raw_chapter_3.ipynb
+++ b/camera_raw_chapter_3.ipynb
@@ -203,14 +203,27 @@
       "metadata": {
         "colab_type": "code",
         "id": "dkhmrG-Rz_5h",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b18de591-704e-4a92-83c3-a174d5555b45"
       },
       "cell_type": "code",
       "source": [
         "!pip install rawpy"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: rawpy in /usr/local/lib/python3.6/dist-packages (0.13.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from rawpy) (1.14.6)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -238,14 +251,29 @@
       "metadata": {
         "colab_type": "code",
         "id": "jlP1Ed_M0k0K",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "ebd560d3-57a3-4f9b-c57a-4002174efcf6"
       },
       "cell_type": "code",
       "source": [
         "!pip install imageio"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: imageio in /usr/local/lib/python3.6/dist-packages (2.4.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from imageio) (1.14.6)\n",
+            "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (from imageio) (4.0.0)\n",
+            "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow->imageio) (0.46)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -313,7 +341,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "GRFJ-9qV2iBj",
-        "outputId": "6df19f1d-9558-4f62-ed56-79a89be98090",
+        "outputId": "26f8e493-43ab-4c07-b7ee-fcde971dc430",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -323,7 +351,7 @@
       "source": [
         "print(raw.sizes)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +445,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "X7H2PhNb8GgE",
-        "outputId": "4dd17043-3249-4057-a7c1-fcc99225a37f",
+        "outputId": "29b428ad-1035-4bfb-db7d-3c0186859e2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -428,7 +456,7 @@
         "h, w = raw_array.shape\n",
         "print(h, w)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +484,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "cvyGWw7iEd_J",
-        "outputId": "8c0fe899-de35-4816-a786-ed878ce21767",
+        "outputId": "2d9caf71-c64a-4ff2-9ced-c98920f1ddcc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
@@ -472,7 +500,7 @@
         "# 日本語フォントを設定\n",
         "plt.rcParams['font.family'] = 'IPAPGothic'"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +509,7 @@
             "Building dependency tree       \n",
             "Reading state information... Done\n",
             "fonts-ipafont-gothic is already the newest version (00303-18ubuntu1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 8 not upgraded.\n"
+            "0 upgraded, 0 newly installed, 0 to remove and 10 not upgraded.\n"
           ],
           "name": "stdout"
         }
@@ -501,7 +529,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "IsGNEjZ27P0N",
-        "outputId": "efdec412-3816-4646-a2de-66b25f577bbd",
+        "outputId": "1bf89feb-84e4-4be8-ea9c-c66d1845cc15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 389
@@ -521,7 +549,7 @@
         "# 実際に表示します。\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -555,7 +583,9 @@
         "```\n",
         "\n",
         "を実行して\n",
-        "Runtime->Restart Runtimeで再実行してみてください。"
+        "Runtime->Restart Runtimeを選択したあとで、ページの最初から再実行してみてください。\n",
+        "\n",
+        "文字化けを無視しても処理自体に支障はありません。"
       ]
     },
     {
@@ -599,11 +629,7 @@
         "\n",
         "### この節について\n",
         "\n",
-        "この節では、RAWデータの簡易でモザイク処理を行い、画像をフルカラーで表示してみます。\n",
-        "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_toc.ipynb)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-        "\n",
-        "https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_3_2.ipynb"
+        "この節では、RAWデータの簡易でモザイク処理を行い、画像をフルカラーで表示してみます。"
       ]
     },
     {
@@ -622,7 +648,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "wwAqe8edQr80",
-        "outputId": "b5d27bf2-cd3c-4800-ab08-763587728b0a",
+        "outputId": "d939dd12-fdf0-43ad-af13-10e641bfaea8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
@@ -640,7 +666,7 @@
         "plt.title(u\"RAW画像の拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -674,7 +700,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "citrCKDuRLIx",
-        "outputId": "8edfc736-67fb-4a0a-b029-df06df405f0f",
+        "outputId": "fb34ce7b-6f8e-44e8-d9f3-4cc8eb13805a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -684,7 +710,7 @@
       "source": [
         "print(raw.raw_pattern)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +803,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "vIxAerPuRiTr",
-        "outputId": "a2c3d7b3-fcf9-4583-d9a1-6a8c65fec91d",
+        "outputId": "c5ed599d-6f13-4c78-df80-f3445d5f0f44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
@@ -792,7 +818,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたもの\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -822,7 +848,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "xcJXbsRbRmyW",
-        "outputId": "f36a2f29-6d85-4955-9dae-83678492c0e0",
+        "outputId": "6e0c7a75-52d2-40e7-dbd2-d2171838c977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
@@ -837,7 +863,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたものを拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -894,7 +920,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "tHv-GuqeRrcr",
-        "outputId": "dc05aac5-16d5-4069-bc03-49499cb4ee7c",
+        "outputId": "6e3a3e38-14cd-4650-9868-e8c5b70302f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -908,7 +934,7 @@
         "# 表示して確認\n",
         "print(bayer_pattern)"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -972,7 +998,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "w-JNFd3kR-kj",
-        "outputId": "b1bfed9d-ce02-4c73-f7ff-0902a8eeded2",
+        "outputId": "b67ef687-b62f-4254-952f-5670c990ef2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -990,7 +1016,7 @@
         "plt.title(u\"簡易デモザイク\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1086,7 +1112,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "EyOGbNNKSNBC",
-        "outputId": "1b25cf75-1091-46f9-b5a1-e0645d5505d1",
+        "outputId": "ffe7cec2-9b2b-4814-81e0-5ad2c44e5188",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -1106,7 +1132,7 @@
         "plt.title(u\"simple_demosaic関数の出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,19 +1147,6 @@
           }
         }
       ]
-    },
-    {
-      "metadata": {
-        "colab_type": "code",
-        "id": "ObRppV0nSQhy",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "metadata": {
@@ -1199,7 +1212,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "AjA1jEabSrKW",
-        "outputId": "8191882f-461f-470b-d230-4556ee27a658",
+        "outputId": "6cf2a848-69d9-474d-afc3-8e598147aee0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1210,7 +1223,7 @@
         "wb = raw.camera_whitebalance\n",
         "print(wb)"
       ],
-      "execution_count": 0,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,7 +1285,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "vs-LEvimS7eI",
-        "outputId": "f0e18b30-c1a4-4cb8-e932-5c5452dbeeb0",
+        "outputId": "7d8b0974-486e-4531-cc30-dc90a7f8fc49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
@@ -1294,7 +1307,7 @@
         "plt.title(u\"ホワイトバランス後の画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1409,7 +1422,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "FpAJSXbNTpC3",
-        "outputId": "d1530aca-539e-4be0-f815-c46b77054b4d",
+        "outputId": "c820f744-3684-4baa-f61c-694e815810ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 362
@@ -1430,7 +1443,7 @@
         "plt.title(u\"white_balance関数を使った出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1496,7 +1509,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "vTqKYSgyTq03",
-        "outputId": "58526b84-be1d-4c6c-c6bd-d504314dc33d",
+        "outputId": "f9b3073b-04ca-44a7-855a-17be7102e477",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1507,7 +1520,7 @@
         "blc = raw.black_level_per_channel\n",
         "print(blc)"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1581,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "H4W4NQtyUEf9",
-        "outputId": "58e5fa79-9e65-465e-a0b5-8f61cdcea4e4",
+        "outputId": "65552f9c-2cd8-4998-849d-3e55ae73aa92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -1579,7 +1592,7 @@
         "print(\"ブラックレベル補正前: 最小値=\", raw_array.min(), \", 最大値=\", raw_array.max())\n",
         "print(\"ブラックレベル補正前: 最小値=\", blc_raw.min(), \", 最大値=\", blc_raw.max())"
       ],
-      "execution_count": 0,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1643,7 +1656,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "eSaGwptIUoIA",
-        "outputId": "40c0f90b-fcfc-483e-ca66-5a8eaffe9d6c",
+        "outputId": "6a90782e-4392-4a61-c25d-4e11f095f31f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -1663,7 +1676,7 @@
         "plt.title(u\"ブラックレベル補正後の画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1756,7 +1769,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "hmUxe8UJVtuC",
-        "outputId": "55870f40-5e6b-4592-87b7-52230c2f6d40",
+        "outputId": "883d2880-7b3f-480d-cac6-74fbc7f32c23",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -1783,7 +1796,7 @@
         "plt.title(u\"black_level_correction関数を使った出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1847,7 +1860,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "sc3zqcTyUsRo",
-        "outputId": "a74772bd-2b02-43d4-eb79-f79e0b8596a6",
+        "outputId": "a9a2e14e-889e-4a4e-e487-6fd8f3aa6f88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
@@ -1867,7 +1880,7 @@
         "plt.title(u\"ガンマカーブ\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1903,7 +1916,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "jHmjUBx2VJih",
-        "outputId": "39d22d83-78fd-4e7f-f4ba-694dfee2dcd7",
+        "outputId": "6d3f34fc-abe5-41ed-e576-c798d31a1192",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 361
@@ -1919,7 +1932,7 @@
         "plt.title(u\"ガンマ補正カーブ\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1981,7 +1994,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "iwnt-EEqVU7u",
-        "outputId": "c4d5d970-5116-4ab5-e4a3-b4bd9f26d318",
+        "outputId": "a9b360ee-fb06-4f85-fd6a-3ea4c189e186",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
@@ -2001,7 +2014,7 @@
         "plt.title(u\"ガンマ補正前\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2060,7 +2073,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "oCKFLXB3V-qL",
-        "outputId": "644b55cc-24bc-4dcf-ebe7-039becab93bd",
+        "outputId": "7129ad6d-adcb-43ad-9688-e46db0f7d62c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
@@ -2075,7 +2088,7 @@
         "plt.title(u\"ガンマ補正後\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2177,7 +2190,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "RAUDnz95WRy9",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 210
+        },
+        "outputId": "8527ae15-12be-4b8e-d375-f5beab5b88ef"
       },
       "cell_type": "code",
       "source": [
@@ -2185,8 +2202,26 @@
         "\n",
         "import raw_process"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-03-02 19:39:32--  https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 17130 (17K) [text/plain]\n",
+            "Saving to: ‘raw_process.py’\n",
+            "\n",
+            "\rraw_process.py        0%[                    ]       0  --.-KB/s               \rraw_process.py      100%[===================>]  16.73K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2019-03-02 19:39:32 (1.34 MB/s) - ‘raw_process.py’ saved [17130/17130]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -2232,7 +2267,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "8QuW6ZZwXMqr",
-        "outputId": "e13e7ef6-3914-49e3-84fd-679aafcd3c8e",
+        "outputId": "c8ba9339-321f-4b8b-b661-13d7b330e0f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -2247,7 +2282,7 @@
         "plt.title(u\"モジュールを使った処理の結果\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
