文字化け次の処理を追加。

--- a/camera_raw_chapter_4_3.ipynb
+++ b/camera_raw_chapter_4_3.ipynb
@@ -82,8 +82,6 @@
         "# 日本語フォントの設定\n",
         "!apt -y install fonts-ipafont-gothic\n",
         "plt.rcParams['font.family'] = 'IPAPGothic'\n",
-        "# もし日本語が文字化けしている場合`! rm /content/.cache/matplotlib/fontList.json`を実行して、\n",
-        "# Runtime->Restart Runtimeで再実行\n",
         "\n",
         "# 画像をダウンロードします。\n",
         "!if [ ! -f chart.jpg ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/chart.jpg; fi\n",
@@ -99,7 +97,7 @@
         "raw_array = raw.raw_image\n",
         "h, w = raw_array.shape"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,6 +117,23 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "Oj3Nao_Om5oT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# もし日本語が文字化けしている場合以下の３行の行頭の#を削除して実行後、\n",
+        "# import matplotlib\n",
+        "# target_dir = matplotlib.get_cachedir()\n",
+        "# ! rm {target_dir}/*.json\n",
+        "# その後Runtime->Restart Runtime選択してページ全体を再実行"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -187,7 +202,7 @@
         "plt.title(u\"欠陥画素\")\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -486,7 +501,7 @@
         "plt.title(u\"欠陥画素補正後\")\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
