文字化け対処法を追加。

--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -80,12 +80,10 @@
         "# 日本語フォントの設定\n",
         "!apt -y install fonts-ipafont-gothic\n",
         "plt.rcParams['font.family'] = 'IPAPGothic'\n",
-        "# もし日本語が文字化けしている場合`! rm /content/.cache/matplotlib/fontList.json`を実行して、\n",
-        "# Runtime->Restart Runtimeで再実行\n",
         "\n",
         "from raw_process import simple_demosaic, white_balance, black_level_correction, gamma_correction"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,6 +103,23 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "nniQEuMMmfAx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# もし日本語が文字化けしている場合以下の３行の行頭の#を削除して実行後、\n",
+        "# import matplotlib\n",
+        "# target_dir = matplotlib.get_cachedir()\n",
+        "# ! rm {target_dir}/*.json\n",
+        "# その後Runtime->Restart Runtime選択してページ全体を再実行"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -222,7 +237,7 @@
         "plt.title(u\"簡易デモザイクを使ったRAW現像結果\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -263,7 +278,7 @@
         "print(\"現像後のサイズ = \", gmm_img.shape)\n",
         "print(\"RAWデータのサイズ = \", raw_array.shape)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +377,7 @@
         "plt.title(u\"簡易RAW現像結果（左）とJPEG画像(右)\")\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,7 +444,7 @@
         "# 実際に表示。\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -551,7 +566,7 @@
       "source": [
         "print(dms_img.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +632,7 @@
         "plt.title(u\"線形補間デモザイク画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -677,7 +692,7 @@
         "# 実際に表示。\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
