Link to chapter 6 3 is added.

--- a/camera_raw_chapter_6_2.ipynb
+++ b/camera_raw_chapter_6_2.ipynb
@@ -99,7 +99,7 @@
         "raw_array = raw.raw_image\n",
         "h, w = raw_array.shape"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -702,7 +702,7 @@
         "plt.title(u\"トーンカーブ補正\")\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -757,7 +757,7 @@
         "plt.title(u\"高度なデモザイク、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -955,7 +955,7 @@
         "plt.title(u\"高度なデモザイク最終画像、拡大\")\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1007,7 +1007,7 @@
         "\n",
         "こういった事情を考慮にいれても、今回紹介した手法はシンプルな割には高画質の出力が得られる良いアルゴリズムだと思います。\n",
         "\n",
-        "次は全体の[まとめ](https://colab.research.google.com/github/moizumi99/camera_raw_processing/blob/master/camera_raw_chapter_7_1.ipynb)です。\n",
+        "次は全体の[まとめ](https://bit.ly/raw_chap_6_3)です。\n",
         "\n"
       ]
     }
