TOC updated with chapter 6-3

--- a/camera_raw_chapter_6_3.ipynb
+++ b/camera_raw_chapter_6_3.ipynb
@@ -667,7 +667,7 @@
     "\n",
     "今回は市販のミラーレスカメラ、ソニーα7-IIIのRAW画像を現像してみました。\n",
     "\n",
-    "次は全体の[まとめ](https://bit.ly/raw_chap_6_3)です。\n",
+    "次は全体の[まとめ](https://bit.ly/raw_chap_7)です。\n",
     "\n"
    ]
   }
