--- a/camera_raw_toc.ipynb
+++ b/camera_raw_toc.ipynb
@@ -62,6 +62,8 @@
     "  6.1 [線形補間デモザイクの周波数特性](http://bit.ly/raw_chap_6_1)\n",
     "\n",
     "  6.2 [高度なデモザイク処理](http://bit.ly/raw_chap_6_2)\n",
+    "  \n",
+    "  6.3 [ミラーレスカメラ（ソニーα7-III)のRAW現像](http://bit.ly/raw_chap_6_3)\n",
     "\n",
     "\n",
     "7. [まとめ](http://bit.ly/raw_chap_7)\n",
