Link to raw_process.py is fixed.

--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -57,10 +57,10 @@
       "metadata": {
         "id": "R7s9rbZkqO3n",
         "colab_type": "code",
-        "outputId": "d9dc57fd-6b8b-487b-970f-c07275ad4388",
+        "outputId": "06c00d7d-3238-40c7-f7c2-c501006d835e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 210
+          "height": 503
         }
       },
       "cell_type": "code",
@@ -75,7 +75,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# 前節までに作成したモジュールのダウンロード\n",
-        "!if [ ! -f raw_process.py ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/camera_raw_process.py; fi\n",
+        "!if [ ! -f raw_process.py ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py; fi\n",
         "\n",
         "# 日本語フォントの設定\n",
         "!apt -y install fonts-ipafont-gothic\n",
@@ -83,7 +83,7 @@
         "\n",
         "from raw_process import simple_demosaic, white_balance, black_level_correction, gamma_correction"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,6 +94,22 @@
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from imageio) (1.14.6)\n",
             "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (from imageio) (4.0.0)\n",
             "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow->imageio) (0.46)\n",
+            "--2019-03-03 05:16:56--  https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py\n",
+            "Resolving github.com (github.com)... 192.30.253.113, 192.30.253.112\n",
+            "Connecting to github.com (github.com)|192.30.253.113|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py [following]\n",
+            "--2019-03-03 05:16:56--  https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 17130 (17K) [text/plain]\n",
+            "Saving to: ‘raw_process.py’\n",
+            "\n",
+            "raw_process.py      100%[===================>]  16.73K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2019-03-03 05:16:56 (1.23 MB/s) - ‘raw_process.py’ saved [17130/17130]\n",
+            "\n",
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
             "Reading state information... Done\n",
@@ -108,7 +124,11 @@
       "metadata": {
         "id": "nniQEuMMmfAx",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6e77140a-b214-4e81-a96e-25600418cddf"
       },
       "cell_type": "code",
       "source": [
@@ -118,8 +138,16 @@
         "# ! rm {target_dir}/*.json\n",
         "# その後Runtime->Restart Runtime選択してページ全体を再実行"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "rm: cannot remove '/root/.cache/matplotlib/*.json': No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
