--- a/camera_raw_chapter_3.ipynb
+++ b/camera_raw_chapter_3.ipynb
@@ -46,7 +46,7 @@
       "source": [
         "この節ではまずRAW画像を準備し、簡易的なデモザイクを行ってみます。\n",
         "\n",
-        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc))から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
         "\n",
         "http://bit.ly/raw_chap_3"
       ]
@@ -203,17 +203,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "dkhmrG-Rz_5h",
+        "outputId": "b18de591-704e-4a92-83c3-a174d5555b45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "b18de591-704e-4a92-83c3-a174d5555b45"
+        }
       },
       "cell_type": "code",
       "source": [
         "!pip install rawpy"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,17 +251,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "jlP1Ed_M0k0K",
+        "outputId": "ebd560d3-57a3-4f9b-c57a-4002174efcf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "ebd560d3-57a3-4f9b-c57a-4002174efcf6"
+        }
       },
       "cell_type": "code",
       "source": [
         "!pip install imageio"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
       "source": [
         "print(raw.sizes)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
         "h, w = raw_array.shape\n",
         "print(h, w)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
         "# 日本語フォントを設定\n",
         "plt.rcParams['font.family'] = 'IPAPGothic'"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +549,7 @@
         "# 実際に表示します。\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -666,7 +666,7 @@
         "plt.title(u\"RAW画像の拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -710,7 +710,7 @@
       "source": [
         "print(raw.raw_pattern)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +818,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたもの\")\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -863,7 +863,7 @@
         "plt.title(u\"RAW画像の各画素に色を割り当てたものを拡大表示\")\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -934,7 +934,7 @@
         "# 表示して確認\n",
         "print(bayer_pattern)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1016,7 @@
         "plt.title(u\"簡易デモザイク\")\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1132,7 +1132,7 @@
         "plt.title(u\"simple_demosaic関数の出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,7 +1223,7 @@
         "wb = raw.camera_whitebalance\n",
         "print(wb)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,7 +1307,7 @@
         "plt.title(u\"ホワイトバランス後の画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1443,7 +1443,7 @@
         "plt.title(u\"white_balance関数を使った出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1520,7 +1520,7 @@
         "blc = raw.black_level_per_channel\n",
         "print(blc)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,7 +1592,7 @@
         "print(\"ブラックレベル補正前: 最小値=\", raw_array.min(), \", 最大値=\", raw_array.max())\n",
         "print(\"ブラックレベル補正前: 最小値=\", blc_raw.min(), \", 最大値=\", blc_raw.max())"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,7 +1676,7 @@
         "plt.title(u\"ブラックレベル補正後の画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1796,7 +1796,7 @@
         "plt.title(u\"black_level_correction関数を使った出力\")\n",
         "plt.show()"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1880,7 +1880,7 @@
         "plt.title(u\"ガンマカーブ\")\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1932,7 +1932,7 @@
         "plt.title(u\"ガンマ補正カーブ\")\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2014,7 +2014,7 @@
         "plt.title(u\"ガンマ補正前\")\n",
         "plt.show()"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2088,7 +2088,7 @@
         "plt.title(u\"ガンマ補正後\")\n",
         "plt.show()"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2190,11 +2190,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "RAUDnz95WRy9",
+        "outputId": "8527ae15-12be-4b8e-d375-f5beab5b88ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 210
-        },
-        "outputId": "8527ae15-12be-4b8e-d375-f5beab5b88ef"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2202,7 +2202,7 @@
         "\n",
         "import raw_process"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2282,7 +2282,7 @@
         "plt.title(u\"モジュールを使った処理の結果\")\n",
         "plt.show()"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
